k8s/manifests/app-deployment-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: random-bojack-app
  labels:
    app: random-bojack-app
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: random-bojack-app
  template:
    metadata:
      labels:
        app: random-bojack-app
    spec:
      containers:
        - name: random-bojack-app
          image: docker.io/vvhale/random-bojack:%APP_IMAGE_TAG%
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: 500m
              memory: 512Mi
            limits:
              cpu: 500m
              memory: 1024Mi
---
apiVersion: v1
kind: Service
metadata:
  name: random-bojack-app
  labels:
    app: random-bojack-app
spec:
  ports:
    - port: 3000
  selector:
    app: random-bojack-app
